--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,6 @@ S3method(as.list,ggplot)
 S3method(as.list,proto)
 S3method(as.list,scale)
 export(json)
+export(r2d3)
 import(rjson)
+importFrom(digest,digest)
