--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,10 @@ S3method(as.list,proto)
 S3method(as.list,scale)
 export(json)
 export(r2d3)
+export(start_server)
+import(Rook)
 import(rjson)
 importFrom(digest,digest)
+importFrom(tools,file_ext)
+importFrom(tools,file_path_sans_ext)
+importFrom(whisker,whisker.render)
